--- a/_posts/2020-05-01-TheoryDay3.md
+++ b/_posts/2020-05-01-TheoryDay3.md
@@ -10,3 +10,7 @@ tags:
 <h2>Day 3<h2>
 
 <br/>
+
+<h3>Step 1: Read the "An Efficient 3D CNN for Action/Object Segmentation in Vedio" paper</h3>
+今天早上我目標是專心讀兩個paper，首先我要先解決 paper 1，是3D CNN with vedio，以下列出了一些問題:<br/>
+問題1: 3D pyramid pooling?
