--- a/_posts/2020-05-05-TheoryDay4.md
+++ b/_posts/2020-05-05-TheoryDay4.md
@@ -12,9 +12,10 @@ tags:
 <br/>
 從5/2開始我就再也沒有寫theory record了，因為發現了一些問題，就是我們的將single energy 的 data和MC放入continuous energy MC的model，但除了BDTG可以seperate Pion and Electron 之外，其他的algorithm都沒有辦法seperate，這個問題當下我也有點震驚，本來想說已經告一段落了，沒想到要是有很多的得處理，不管怎麼樣，這幾天下來我還是列出了一些我有做的事情當成紀錄，以後寫papaer的時候還是可以有很大的參考，在列出紀錄之前，我先show一些圖片來證明，以下是200GeV的Pion & Electron
 
-![E1E7200GeVDNN_CPUElecDataMCRatio](https://user-images.githubusercontent.com/13759047/81037294-c3f44d00-8ed4-11ea-8443-7fe4ef1f3cf2.png)
-
-![E1E7200GeVDNN_CPUPionDataMCRatio](https://user-images.githubusercontent.com/13759047/81037322-da020d80-8ed4-11ea-8fc0-663a68dc546c.png)
+<div class="TheoryOther">
+    <img src="https://user-images.githubusercontent.com/13759047/81037294-c3f44d00-8ed4-11ea-8443-7fe4ef1f3cf2.png"/>
+    <img src="https://user-images.githubusercontent.com/13759047/81037322-da020d80-8ed4-11ea-8fc0-663a68dc546c.png"/>
+</div>
 <br/>
 
 <h3>Event 1</h3>
@@ -24,7 +25,13 @@ tags:
 
 <h3>Event 2</h3>
 後來我也嘗試了解我的code是不是又任何的問題，但看起來真的是一樣的...我甚至把原來要train model的event重新再次丟進model裡面看有沒有差別，結果是....
-![E1E760to130GeVPreseleContinuousDataMCBDTRes](https://user-images.githubusercontent.com/13759047/81038441-99a48e80-8ed8-11ea-84ba-9c85c786c45b.png)
+<div class="TheoryOther">
+    <h3> E1/E7 Continuous 60 to 130GeV model</h3>
+    <img src="https://user-images.githubusercontent.com/13759047/81038441-99a48e80-8ed8-11ea-84ba-9c85c786c45b.png"/>
+    <h3> E1/E7 Continuous 80 to 100GeV model(without pBeam pre-selection)</h3>
+    <img src="https://user-images.githubusercontent.com/13759047/81129077-c3f85980-8f75-11ea-97c2-79fd6587e75d.png"/>
+</div>
+
 看起來不是code的問題，因為就像TMVA的DNN output distribution一樣，Pion/Electron seperate的很好，所以看來應該也不能由technical上下手...
 <br/>
 <h3>Event 3</h3>
@@ -46,3 +53,4 @@ tags:
 <h3>100GeV E7/E19 Varible with DNN CPU Algorithm</h3>
 <img src="https://user-images.githubusercontent.com/13759047/81078507-ead87080-8f20-11ea-8a71-1c9cb92c8a19.png" />
 </div>
+出現了另外的一些結果，但說實話我真的沒有太多的概念和想法，或許真的只能繼續跟老師討論才會有比較正確的方向。但老實說，我還是非常在意無法將data/MC放入continuous energy model結果很難seperate的結果....
