--- a/_posts/2020-05-06-TheoryDay5.md
+++ b/_posts/2020-05-06-TheoryDay5.md
@@ -20,4 +20,11 @@ envisage:注視，觀察<br/>
 TDR:Technical Design Report<br/>
 
 <h2>Day 6: In the same condition to compare our testing result</h2>
-因為在九個不同的single beam energy的Data/MC，在跟continuous beam energy condition不同的情況下丟進去真的很難去作出比較，所以今天早上我就先來處理一下：<span class="TheoryOther">Under the samle condition(Etotal from 80~100GeV)</span>來比較看看!!!!
+因為在九個不同的single beam energy的Data/MC，在跟continuous beam energy condition不同的情況下丟進去真的很難去作出比較，所以今天早上我就先來處理一下：<span class="TheoryOther">Under the samle condition(Etotal from 80~100GeV)</span>來比較看看，但要<span style="color:#ff0000">注意</span>，Etotal of each layer 在single beam energy 的狀況下electron除了80GeV & 100GeV之外，electron的event在80~100GeV都是非常的少，似乎也沒有必要特別比較，只要考慮<span class="TheoryOther">80 & 100GeV</span>就可以??
+
+<div class="TheoryOther">
+    <h3>100GeV PreSelection E1/E7 Variable with DNN CPU Algorithm</h3>
+    <img src="https://user-images.githubusercontent.com/13759047/81273180-196d5d00-9081-11ea-9ee3-4e322fd40061.png"/>
+    <!--<h3>100GeV PreSelection E7/E19 Variable with DNN CPU Algorithm</h3>-->
+
+</div>
