--- a/_posts/2020-05-06-TheoryDay5.md
+++ b/_posts/2020-05-06-TheoryDay5.md
@@ -19,7 +19,7 @@ deposit:沈積物<br/>
 envisage:注視，觀察<br/>
 TDR:Technical Design Report<br/>
 
-<h2>Day 6: In the same condition to compare our testing result</h2>
+<h2>Day 5-2: In the same condition to compare our testing result</h2>
 因為在九個不同的single beam energy的Data/MC，在跟continuous beam energy condition不同的情況下丟進去真的很難去作出比較，所以今天早上我就先來處理一下：<span class="TheoryOther">Under the samle condition(Etotal from 80~100GeV)</span>來比較看看，但要<span style="color:#ff0000">注意</span>，Etotal of each layer 在single beam energy 的狀況下electron除了80GeV & 100GeV之外，electron的event在80~100GeV都是非常的少，似乎也沒有必要特別比較，只要考慮<span class="TheoryOther">80 & 100GeV</span>就可以??是的!!!!頂多再多加80GeV跟120GeV的single beam energy<br/>
 一樣要確認，拿掉<span class="TheoryOther">pBeam</span>一直都是continuous beam energy，其他的single beam energy本來就跟pBeam沒也關係!!!
 
