--- a/_posts/2020-05-11-TheoryDay6.md
+++ b/_posts/2020-05-11-TheoryDay6.md
@@ -4,11 +4,14 @@ title: "Theory Day 6"
 permalink: "2020/05/11/TheoryDay6.html"
 date: "2020-05-11"
 tags:
-    - "TheoryRecord"
+    - "TheoryRecord" 
+    - "HGCAL"
 ---
 <h2>Day 6: CNN Result and how to right my theory</h2>
 前幾天有用CNN without pBeam cut selection出現的結
 果，大概沒有太多的問題，當然可以注意一下，在200GeV以上的single beam energy Data/MC似乎大部分都沒有顯示出來，但我想應該是output distribution of each event都是太接近0 or 1，所以在其他的histogram都value都是0/0，也就沒辦法在ratio下顯示出來，以下我用CNN 100GeV pion output distribution & CNN 200GeV pion output distribution來舉例:
+
+
 <div class="TheoryOther">
 <h3>CNN 100GeV Pion Output Distribution</h3>
 <img src="https://user-images.githubusercontent.com/13759047/81643206-ae909d00-9457-11ea-9706-ec327b595554.png">
